--- a/report.Rmd
+++ b/report.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Executive Summary
 
-The objective of this project is to develop a recommendation system based on the movielens Dataset. To achieve this ratings need to be predicted for a user based on past ratings. The goal here is to accurately predict ratings. To be able to gauge the performance of different models RMSE (Root Mean Square Error) will be used. The dataset has been split into two sets, one for training(edx) and the other testing(validation) our model. The validation set will not be used, except to validate the best performing model. The training set will be further split into a train set and a test set to identify the best model. The best model will be one which has the least RMSE. The steps followed to build this model are first importing the dataset, preparing the dataset, exploring or analysing the dataset, building the models, choosing the best model and finally validating the results on the validation set.
+The objective of this project is to develop a recommendation system based on the Movielens Dataset. To achieve this, ratings need to be predicted for a user based on past ratings. The goal here is to accurately predict ratings. To be able to gauge the performance of different models, RMSE (Root Mean Square Error) will be used. The dataset has been split into two sets, one for training(edx) and the other testing(validation) our model. The validation set will not be used, except to validate the best performing model. The training set will be further split into a train set and a test set to identify the best model. The best model will be one which has the least RMSE. The steps followed to build this model are first importing the dataset, preparing the dataset, exploring or analysing the dataset, building the models, choosing the best model and finally validating the results on the validation set.
 
 ### Importing the Dataset
 The code to import the dataset has been proveded by edx. 
@@ -73,7 +73,6 @@ library(caret)
 library(tidyverse)
 if(!require(lubridate)) install.packages("lubridate", repos = "http://cran.us.r-project.org")
 library(lubridate)
-library(stringr)
 if(!require(knitr)) install.packages("knitr", repos = "http://cran.us.r-project.org")
 if(!require(kableExtra)) install.packages("kableExtra", repos = "http://cran.us.r-project.org")
 library(knitr)
@@ -81,24 +80,24 @@ library(kableExtra)
 
 ```
 
-### Exploring and Preparing the Dataset
-```{r}
+### Analysis
+```{r dimension edx}
 dim(edx)
 ```
 
 We notice that the dataset is pretty huge with 9,000,055 rows and 6 columns
 
-```{r message = FALSE,warning = FALSE}
+```{r general,message = FALSE,warning = FALSE}
 names(edx)
 edx%>%head()%>%knitr::kable()
 ```
 
 The edx dataframe comprises of 5 columns. 'userId' represents the unique user ID, 'movieId' represents the unique ID for each movie, timestamp denotes the time of the rating, title represents title and genres the combination of genres.
 Each row represents one rating by a user.
-We can notice that the title section contains the year the movie was released in. We will use regex to extract the year released from this column. The regex pattern used to extract the data is "(\\d{4})\\)$" . This can be  evidenced by the fact that the year is at the end of  the string in column title. We use the str_match() function  from the stringr package to  extract the year and convert to a date format using  the as.date() and year() functions from the  lubridate package.
+We can notice that the title section contains the year the movie was released in. We will use regex to extract the year released from this column. The regex pattern used to extract the data is "(\\d{4})\\)$" . This can be  evidenced by the fact that the year is at the end of  the string in column title. We use the str_match() function  from stringr in tidyverse package to  extract the year and convert to a date format using  the as.date() and year() functions from the  lubridate package. 
 
 
-```{r message = FALSE,warning = FALSE}
+```{r year released,message = FALSE,warning = FALSE}
 # extracting the year released from the title column
 regex_pattern<-"(\\d{4})\\)$"
 edx<-edx%>%
@@ -109,7 +108,7 @@ edx%>%head()%>%
 
 We can convert the timestamp column to a readable datetime object using the as_datetime() from the lubridate package
 
-```{r message = FALSE,warning = FALSE}
+```{r datetime,message = FALSE,warning = FALSE}
 # converting the timestamp column to readable date
 edx <- edx%>%
   mutate(datetime=as_datetime(timestamp))
@@ -121,7 +120,7 @@ edx%>%
 ## Exploring the relationship between ratings and the year the movie was released
 
 
-```{r message = FALSE,warning = FALSE}
+```{r plot year released,message = FALSE,warning = FALSE}
 #exploring relation between ratings and the year movie was released
 
 edx%>%
@@ -144,12 +143,12 @@ edx%>%
 ```
 
 The first plot shows that there is a clear dip in ratings for movies that were released after the late 1980s. There could be a relationship between the year the movie was released and the ratings as there are two clear clusters.
-In the second plot shows that  post 1993 the number of ratings for movies shot up while also showing a  rapid declining  pattern post that.
+The second plot shows that  post 1993 the number of ratings for movies shot up while also showing a  rapid declining  pattern post that.
 
 ## Exploring the relationship between ratings and when the movie was rated
 
 
-```{r message = FALSE,warning = FALSE}
+```{r plot rating timestamp,message = FALSE,warning = FALSE}
 edx%>%
   mutate(week_rated=round_date(datetime,unit = 'week'))%>%
   group_by(week_rated)%>%
@@ -168,21 +167,21 @@ edx%>%
   ggtitle("Number of Ratings vs Timestamp of Rating")
 ```
 
-The relationship does not seem to be strong between the year as a predictor and ratings. We can safely ignore the timestamp of rating for predicting the ratings.
+The relationship does not seem to be strong between ratings and the timestamp as a predictor . We can safely ignore the timestamp of rating for predicting the ratings.
 
 ## Exploring the relationship between ratings and different genres.
 
-```{r message = FALSE,warning = FALSE}
+```{r unique genres,message = FALSE,warning = FALSE}
 unique(unlist(str_split(as.vector(unique(edx$genres)),"\\|")))
 ```
 
-```{r message = FALSE,warning = FALSE}
+```{r number of genre combinations,message = FALSE,warning = FALSE}
 length(unique(edx$genres))
 ```
 
 There are 20 unique genres and 797 unique combination of these genres(including "(no genres listed)").
 
-```{r message = FALSE,warning = FALSE}
+```{r genres rating,message = FALSE,warning = FALSE}
 edx%>%group_by(genres)%>%
   summarise(avg_ratings=mean(rating))%>%
   top_n(10,avg_ratings) %>% 
@@ -191,7 +190,7 @@ edx%>%group_by(genres)%>%
 ```
 
 
-```{r  message = FALSE,warning = FALSE}
+```{r  genres number rating,message = FALSE,warning = FALSE}
 edx%>%group_by(genres)%>%
   summarise(avg_ratings=mean(rating),n_ratings=n())%>%
   top_n(10,n_ratings)%>%
@@ -200,7 +199,7 @@ edx%>%group_by(genres)%>%
 
 This shows that the most rated movies are not necessarily the best rated.
 
-```{r message = FALSE,warning = FALSE}
+```{r plot genres,message = FALSE,warning = FALSE}
 edx%>%group_by(genres)%>%
   summarise(avg_rating=mean(rating),
             se_rating=sd(rating)/sqrt(n()),
@@ -219,7 +218,7 @@ As can be seen in this plot it is clear that  there is a definite distinction be
 
 ## Exploring the relationship  between ratings and user
 
-```{r message = FALSE,warning = FALSE}
+```{r user, message = FALSE,warning = FALSE}
 edx%>%
   group_by(userId)%>%
   summarise(n_ratings=n())%>%
@@ -228,11 +227,11 @@ edx%>%
   scale_x_continuous(trans = 'log10')+
   ggtitle("Count vs users number of ratings")
 ```
-This plot shows that the number of users who rate over a 1000 are very  less whereas the average user votes about 25 to 100 movies.
+This plot shows that the number of users who rate over a 1000 movies are few in number, whereas the average user rates about 25 to 100 movies.
 
 ## Exploring the relationship  between ratings and movie
 
-```{r message = FALSE,warning = FALSE}
+```{r movie,message = FALSE,warning = FALSE}
 edx%>%
   group_by(movieId)%>%
   summarise(n_ratings=n())%>%
@@ -242,15 +241,16 @@ edx%>%
   ggtitle("Count vs number of ratings for Movies")
 ```
 
-This plot shows that some movies are rated way more often than others.
+This plot shows that some movies are rated more often than others.
 
-## Inference from our Analysis
+## Inference from Analysis
 1) Movies that were released before 1990s have a higher  rating than  movies that were released later.
 2) Some genres are more popular than others while some have a higher rating. 
-3) Some Users tend to be very active in rating while others are not. This could also  mean that some users tend to watch a lot of movies.
+3) Some Users tend to be very active in rating while others do not. This could also  mean that some users tend to watch a lot of movies.
+
 4)Some movies are popular than others  and tend to have many more ratings. 
 
-The goal of  our model is to incorporate these findings in our model  to accurately predict  ratings.
+The goal of  the model is to incorporate these findings and to accurately predict  ratings. 
 
 
 ### Building the Model
@@ -259,20 +259,20 @@ The goal of  our model is to incorporate these findings in our model  to accurat
 
 Here we define a function to measure the performance  of the model.
 
-```{r message = FALSE,warning = FALSE}
+```{r rmse, message = FALSE,warning = FALSE}
 RMSE <-  function(predicted_ratings,actual_ratings){
   sqrt(mean((predicted_ratings-actual_ratings)^2))
 }
 ```
 A tibble to  store all  our results
-```{r message = FALSE,warning = FALSE}
+```{r result table,message = FALSE,warning = FALSE}
 results<-tibble()
 ```
 
 ## Split edx to train_set and  test_set
 
-The caret package provides createDataPartition( function). Using this function we divide the edx dataset to train and test set. To replicate the split the seed has been set to 1. Lastly to ensure that the test_set has the same set of movies and users the semi_join() function from the tidyverse package is used.
-```{r message = FALSE,warning = FALSE}
+The caret package provides createDataPartition( function). Using this function we divide the edx dataset to  a train set and a test set. To replicate the split the seed has been set to 1. Lastly to ensure that the test_set has the same set of movies and users the semi_join() function from the tidyverse package is used.
+```{r split edx,message = FALSE,warning = FALSE}
 #split edx to train and test set
 set.seed(1, sample.kind="Rounding")
 # if using R 3.5 or earlier, use `set.seed(1)` instead
@@ -286,7 +286,7 @@ test_set <- test_set %>% semi_join(train_set, by = "movieId") %>%
 
 ## simplest model
 
-```{r message = FALSE,warning = FALSE}
+```{r naive model,message = FALSE,warning = FALSE}
 mu<-mean(train_set$rating)
 result_simple_model<-RMSE(mu,test_set$rating)
 results<-data.frame(model='Mean Only',result=result_simple_model)
@@ -297,7 +297,7 @@ We start the process  by building the simplest possible model where we assume th
 
 We have seen that different movies have different level of popularity and are rated differently. Here we attempt to incorporate this effect into the model.
 
-```{r message = FALSE,warning = FALSE}
+```{r b_i,message = FALSE,warning = FALSE}
 
 avg_ratings_movie<- train_set%>%
   group_by(movieId)%>%
@@ -315,9 +315,9 @@ results<-rbind(results,
 
 ## Movie Effect + User Effect b_u
 
-Smilar to movies users also have different biases. Consequentially some users tend to rate movies higher while some rate the same movies lower. Here we incorporate this bias into the model.
+Similar to movies, users also have different biases. Consequently some users tend to rate movies higher while some rate the same movies lower. Here, we incorporate this bias into the model.
 
-```{r message = FALSE,warning = FALSE}
+```{r b_u, message = FALSE,warning = FALSE}
 avg_ratings_user  <- train_set%>%
   left_join(avg_ratings_movie,by='movieId')%>%
   group_by(userId)%>%
@@ -337,7 +337,7 @@ results<-rbind(results,
 
 Our analysis also shows that some genres tend to be more popular than others. Here we incorporate this bias into the model.
 
-```{r message = FALSE,warning = FALSE}
+```{r b_g,message = FALSE,warning = FALSE}
 avg_ratings_genre<-train_set %>%
   left_join(avg_ratings_movie,by='movieId')%>%
   left_join(avg_ratings_user,by='userId')%>%
@@ -356,9 +356,9 @@ results <- rbind(results,
 
 ## Movie Effect + User Effect +Genre Effect + year realeased effect b_g
 
-Finally there was a clear distinction in ratings when it came to the year movies where released in. Especially with movies that were releases before the 1990s. This snippet of code incorporates that bias in the model.
+Finally there was a clear distinction in ratings when it came to the year when the movies were released, especially in case of  movies that were released before the 1990s. This snippet of code incorporates this bias in the model.
 
-```{r message = FALSE,warning = FALSE}
+```{r b_t, message = FALSE,warning = FALSE}
 avg_ratings_year<-train_set%>%
   left_join(avg_ratings_movie,by='movieId')%>%
   left_join(avg_ratings_user,by='userId')%>%
@@ -380,12 +380,12 @@ results<-rbind(results,
 
 ## Regularisation
 
-```{r message = FALSE,warning = FALSE}
+```{r resultsunregularised,message = FALSE,warning = FALSE}
 results%>%knitr::kable()
 ```
-As can be seen from the results above for each additional effect the RMSE has come down. To improve upon this result we regularise the dataset. By regularisation we will penalise large estimates for movies with few ratings.
+As can be seen from the results above, for each additional effect the RMSE has come down. To improve upon this result, we regularise the dataset. By regularisation we will penalise large estimates for movies with few ratings.
 
-```{r message = FALSE,warning = FALSE}
+```{r regularise, message = FALSE,warning = FALSE}
 lambdas <- seq(0, 10, 0.5)
 regularisation_function <- function(lambda){
   mu <- mean(train_set$rating)
@@ -417,7 +417,7 @@ rmses_regularised <- map_dbl(lambdas, regularisation_function)
 ```
 
 ## Choosing Lambda (tuning parameter)
-```{r message = FALSE,warning = FALSE}
+```{r lambda,message = FALSE,warning = FALSE}
 best_lambda<-lambdas[which.min(rmses_regularised)]
 results<- rbind(results,
                 data.frame(model='Movie+User+genre+year_released Effect with Regularisation',
@@ -429,13 +429,13 @@ results<- rbind(results,
 
 ## Training on the edx dataset
 
-```{r message = FALSE,warning = FALSE}
+```{r results regularised,message = FALSE,warning = FALSE}
 results%>% knitr::kable()
 ```
 
-Based on this we choose 'Movie+User+genre+year_released Effect with Regularisation' as the best model and train our model on the edx dataset.
+Based on this we choose 'Movie+User+genre+year_released Effect with Regularisation' as the best model and train on the edx dataset.
 
-```{r message = FALSE,warning = FALSE}
+```{r edx train, message = FALSE,warning = FALSE}
 mu<-mean(edx$rating)
 avg_ratings_movie<-edx%>%
   group_by(movieId)%>%
@@ -458,8 +458,9 @@ avg_ratings_year<-edx%>%
 
 
 ```
+### Result
 
-```{r message = FALSE,warning = FALSE}
+```{r final result,message = FALSE,warning = FALSE}
 validation<-validation%>%
   mutate(year_released=year(as.Date(str_match(title,regex_pattern)[,2],format="%Y")))
 predictions<-validation%>%
@@ -472,13 +473,14 @@ final_result<-RMSE(predictions,validation$rating)
 
 ```
 
-### Result
 
-```{r message = FALSE,warning = FALSE}
+
+```{r final, message = FALSE,warning = FALSE}
 print(c("RMSE_final <- ",final_result))
 ```
 
 The best model has resulted in a significant improvement to our RMSE and our final RMSE is 0.86429.
 
-
+### Conclusion
+In conclusion, the results signify that the model can be improved by incorporating features that are significant to predicting ratings. The more number of significant features or predictors incorporated in the model the better the prediction. This also entails that the problem is complex and there can be more predictors  that can be incorporated. For example, user demographics such  as age, sex and geography can play an import role in the prediction process and could be included to predict  the ratings more accurately.Regularisation played a significant role in optimizing  the RMSE with respect to the baseline model. Another important point is that  when deciding on the best model  a  smaller subset of the edx data was  used and  the RMSE was higher. This shows that the larger the  dataset for training the better the predictions. 
 
